# leaf

./: Cargo.toml  RUST_SDK_RESEARCH.md
clients/discord-bridge-rust/: Cargo.toml
clients/discord-bridge-rust/src/: lib.rs  main.rs
clients/discord-bridge-rust/src/bot/: client.rs  events.rs  mod.rs
clients/discord-bridge-rust/src/repository/: mod.rs  sled_impl.rs
clients/discord-bridge-rust/src/services/: message.rs  mod.rs  profile.rs  reaction.rs  structure.rs
clients/discord-bridge-rust/src/sync/: bridge.rs  dispatcher.rs  mod.rs  orchestrator.rs
clients/leaf-client-rust/: COMPATIBILITY_ISSUE.md  Cargo.toml  DISCONNECT_INVESTIGATION.md  INVESTIGATION_SUMMARY.md  PARSER_SOLUTION_ANALYSIS.md  PUBLISHABLE_CRATE_ANALYSIS.md  README.md  REVIEW_SUMMARY.md  RUST_SOCKETIO_LIMITATIONS.md  START_TESTING.md  TESTING.md  TESTING_STRUCTURE.md  TEST_QUICKREF.md  TEST_RESULTS.md  WASM_COMPARISON.md  WASM_MIGRATION.md  WASM_SUMMARY.md
clients/leaf-client-rust/scripts/: test.sh
clients/leaf-client-rust/src/: client.rs  types.rs
clients/leaf-client-rust/tests/: direct_packet_test.rs  disconnect_minimal.rs  emit_test.rs  integration_test.rs  msgpack_encoding.rs  parser_experiment.rs  parser_integration.rs  quick_emit.rs  real_msgpack_test.rs  server_connectivity.rs  transport_analysis.rs  use_msgpack_parser.rs
clients/roomy-sdk-rust/: .env  Cargo.toml  README.md
clients/roomy-sdk-rust/src/: lib.rs
clients/roomy-sdk-rust/src/atproto/: mod.rs
clients/roomy-sdk-rust/src/client/: mod.rs
clients/roomy-sdk-rust/src/connection/: mod.rs
clients/roomy-sdk-rust/src/events/: mod.rs
clients/roomy-sdk-rust/tests/: integration_test.rs  leaf_integration_test.rs
clients/socketio-rust/: Cargo.toml  DELIVERABLE.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  README.md  WORKING_IMPLEMENTATION.md
clients/socketio-rust/examples/: basic_usage.rs  debug_json.rs  verify_leaf_connection.rs
clients/socketio-rust/src/: client_transport.rs  engineio.rs  error.rs  lib.rs  packet.rs  parser.rs  transport.rs
clients/socketio-rust/tests/: leaf_integration_test.rs  msgpack_integration_test.rs
