[package]
name = "roomy-sdk-rust"
version = "0.1.0"
edition = "2024"
authors = ["Muni Town"]
license = "MPL-2.0"
repository = "https://github.com/muni-town/leaf"
description = "Rust SDK for Roomy - AT Protocol collaboration platform"
keywords = ["atproto", "roomy", "bluesky", "collaboration"]
categories = ["api-bindings", "web-programming"]

[dependencies]
# ATProto client
jacquard = "0.9"

# HTTP client (needed by jacquard)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"

# Identifiers
ulid = "1.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "2.0"

# Leaf client (local workspace dependency)
leaf-client-rust = { path = "../leaf-client-rust" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
dotenv = "0.15"
