[package]
name = "socketio-rust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Parser-agnostic Socket.IO client for Rust with support for JSON, MessagePack, and CBOR"
repository = "https://github.com/muni-town/leaf"
keywords = ["socket.io", "websocket", "async", "parser", "msgpack"]
categories = ["network-programming", "web-programming::websocket"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.9"
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
tracing = "0.1"
thiserror = "2.0"
reqwest = "0.12"

# Optional parser implementations
rmp-serde = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1.42", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
reqwest = "0.12"

[features]
default = ["json-parser"]
json-parser = []
msgpack-parser = ["rmp-serde"]
cbor-parser = ["ciborium"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
